@@ -582,45 +582,3 @@ SEXP dgeMatrix_colsums(SEXP x, SEXP naRmP, SEXP cols, SEXP mean)
     UNPROTECT(1);
     return ans;
 }
-
-/* Always returns a full matrix with entries outside the band zeroed
- * Class of the value can be dtrMatrix or dgeMatrix 
- *
- */
-
-SEXP dgeMatrix_band(SEXP x, SEXP k1P, SEXP k2P)
-{
-    SEXP aa, ans = PROTECT(dup_mMatrix_as_dgeMatrix(x));
-    int *adims = INTEGER(GET_SLOT(ans, Matrix_DimSym)),
-	i, j, k1 = asInteger(k1P), k2 = asInteger(k2P);
-    int m = adims[0], n = adims[1], sz,
-	tru = (k1 >= 0), trl = (k2 <= 0);
-    double *aax, *ax = REAL(GET_SLOT(ans, Matrix_xSym));
-
-    if (k1 > k2)
-	error(_("Lower band %d > upper band %d"), k1, k2);
-    for (j = 0; j < n; j++) {
-	int i1 = j - k2, i2 = j + 1 - k1;
-	for (i = 0; i < i1; i++) ax[i + j * m] = 0.;
-	for (i = i2; i < m; i++) ax[i + j * m] = 0.;
-    }
-    if (!tru && !trl) {		/* return the dgeMatrix */
-	UNPROTECT(1);
-	return ans;
-    }
-    /* Copy ans to a dtrMatrix object (must be square) */
-    aa = PROTECT(NEW_OBJECT(MAKE_CLASS("dtrMatrix")));
-    sz = (m < n) ? m : n;
-    SET_SLOT(aa, Matrix_xSym, GET_SLOT(ans, Matrix_xSym));
-    /* FIXME: Shrink the dimnames of ans as appropriate */
-    SET_SLOT(aa, Matrix_DimNamesSym, allocVector(VECSXP, 2));
-    SET_SLOT(aa, Matrix_diagSym, mkString("N"));
-    SET_SLOT(aa, Matrix_uploSym, mkString(tru ? "U" : "L"));
-    adims = INTEGER(ALLOC_SLOT(aa, Matrix_DimSym, INTSXP, 2));
-    adims[0] = adims[1] = sz;
-    aax = REAL(ALLOC_SLOT(aa, Matrix_xSym, REALSXP, sz * sz));
-    for (j = 0; j < sz; j++)
-	Memcpy(aax + j * sz, ax + j * m, sz);
-    UNPROTECT(2);
-    return aa;
-}
